<resources>
    <string name="app_name">RabbitSmart</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_search">Suchen</string>
    <string name="editText_hint_number">Nummer</string>
    <string name="editText_hint_name">Beschreibung</string>
    <string name="button_add_product">+</string>
    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>
    <string name="cab_delete">Objekte löschen</string>
    <string name="cab_change">Objekt ändern</string>
    <string name="cab_search">Objekt suchen</string>
    <string name="cab_copy">Objekt kopieren</string>
    <string name="cab_checked_string">ausgewählt</string>
    <string name="dialog_title">Listeneintrag ändern</string>
    <string name="dialog_title_number">Nummer:</string>
    <string name="dialog_title_product">Objekt:</string>
    <string name="dialog_title_serial">S/N:</string>
    <string name="dialog_title_an_datum">Datum:</string>
    <string name="dialog_title_kosten">Kosten:</string>
    <string name="dialog_title_anwender">Anwender:</string>
    <string name="dialog_button_edit_positive">Objekt ändern</string>
    <string name="dialog_button_edit_negative">Abbrechen</string>
    <string name="dialog_button_copy_positive">Objekt kopieren</string>
    <string name="dialog_button_copy_negative">Abbrechen</string>
    <string name="title_activity_objektdetail">Objektdetails</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="preference_objektliste_title">Liste der Objekte</string>
    <string name="preference_objektliste_key">objektliste</string>
    <string name="preference_objektliste_default">Objekt1,Objekt2,Objekt3,Objekt4</string>
    <string name="action_about">Mehr...</string>
    <string name="title_activity_about">Über RabbitSmart</string>
    <string name="info_text">RabbitSmart</string>
    <string name="button_about">Entwicklung</string>
    <string name="button_kontakt">Kontakt</string>
    <string name="button_impressum">Impressum</string>
    <string name="scan_button">Barcode</string>
</resources>
