<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editText_hint_number"
            android:inputType="number"
            android:id="@+id/editText_number"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editText_objekt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/editText_hint_name" />

        <Button
            android:id="@+id/button_add_objekt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_product" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_objekt_inventur"
        android:layout_gravity="center_horizontal" />
</LinearLayout>