<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_number"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_quantity" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_product"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_new_product" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_serial"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_new_serial" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_an_datum"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"  />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_new_an_datum" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_kosten"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_new_kosten" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_anwender"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_new_anwender" />
    </LinearLayout>

</LinearLayout>