<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="7"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button_about"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/button_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_kontakt" />

    <Button
        android:id="@+id/button_impressum"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/button_impressum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/button_about" />

    <Button
        android:id="@+id/button_kontakt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/button_kontakt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/sym_action_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintRight_toLeftOf="@+id/button_kontakt"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/button_about"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@android:drawable/sym_action_email" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        app:layout_constraintRight_toLeftOf="@+id/button_impressum"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>